# discussion

./: CONTRIBUTING.md  Dockerfile  README.md  makefile  pyproject.toml  requirements-dev.txt
discussion/: __init__.py  main.py
discussion/models/: constants.py  exceptions.py  interfaces.py
discussion/routes/: auth_service.py  discourse.py
discussion/services/: asset.py  discourse.py  rabbitmq_events.py
discussion_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: create_user.json  get_category.json  get_topic_posts.json  get_topics.json  test_get_discussion.py  test_get_posts.py  test_get_topics.py  utils.py
