[project]
name = "discussion-service"
version = "1.0.0"
description = "Microservice allowing to interact with other"
authors = [{ name = "Olivier DAUMAS", email = "olivier.daumas@acri-st.fr" }]


dependencies = [
    "msfwk>=1.0.19",
    "aiofiles>=24.1.0",
    "tenacity>=9.1.2",
    "despsharedlibrary>=1.0.7",
    "httpx==0.27.2",
    "pytest==8.3.2",
    "trio==0.26.2",
    "asyncio==3.4.3",
    "pytest_asyncio==0.24.0",
    "ruff==0.6.3",
    "coverage==7.6.1",
    "pysqlite3==0.5.4",
    "alembic==1.13.3",
    "pytest-custom_exit_code==0.3.0",
]

[tool.uv.sources]
msfwk = { index  = "dsy-pip" }
despsharedlibrary = { index = "dsy-pip" }

[[tool.uv.index]]
name = "dsy-pip"
url = "https://gitlab.acri-cwa.fr/api/v4/projects/782/packages/pypi/simple"
username = "__token__"
default = false